--- a/HelpSource/themes/classic.css
+++ b/HelpSource/themes/classic.css
@@ -2,7 +2,7 @@
     /* editor colors */
     --color-cm-border: #e1e1e1;
     --color-cm-background: #fff;
-    --color-cm-selection: #308cc6;
+    --color-cm-evaluated: #308cc6;
     --color-cm-keyword: #0000e6;
     --color-cm-built-in: #3333bf;
     --color-cm-number: #980099;
@@ -14,6 +14,7 @@
     --color-cm-comment: #bf0000;
     --color-cm-string: #5f5f5f;
     --color-cm-text: #000;
+    --color-cm-selection: var(--color-cm-evaluated);
 
     /* derived colors
     in future use `color-mix` to calculate them which allows for fewer variables
@@ -22,7 +23,7 @@
     */
     --color-bg: var(--color-cm-background);
 
-    --color-warning-bg: var(--color-cm-selection);
+    --color-warning-bg: var(--color-fg-100);
     --color-warning-fg: var(--color-cm-keyword);
 
     --color-fg: var(--color-cm-text);
@@ -37,5 +38,5 @@
     --color-extensions-fg: var(--color-cm-background);
 
     --color-input-fg: var(--color-fg);
-    --color-input-bg: var(--color-fg-300);
+    --color-input-bg: var(--color-fg-100);
 }
