--- a/HelpSource/themes/dark.css
+++ b/HelpSource/themes/dark.css
@@ -2,7 +2,7 @@
     /* editor colors */
     --color-cm-background: #000;
     --color-cm-border: #e1e1e1;
-    --color-cm-selection: #ff5500;
+    --color-cm-evaluated: #e4e4e4;
     --color-cm-keyword: #ffa4e2;
     --color-cm-built-in: #ffa4e2;
     --color-cm-number: #4aff00;
@@ -15,6 +15,7 @@
     --color-cm-string: #d7d7d7;
     --color-cm-text: #ffa4e2;
     --color-cm-string: var(--color-cm-char);
+    --color-cm-selection: #ff5500;
 
     /* derived colors
     in future use `color-mix` to calculate them which allows for fewer variables
@@ -38,5 +39,5 @@
     --color-extensions-fg: var(--color-cm-background);
 
     --color-input-fg: var(--color-fg);
-    --color-input-bg: var(--color-fg-300);
+    --color-input-bg: var(--color-fg-100);
 }
