--- a/HelpSource/themes/dracula.css
+++ b/HelpSource/themes/dracula.css
@@ -2,7 +2,7 @@
     /* editor colors */
     --color-cm-background: #282a36;
     --color-cm-border: #e1e1e1;
-    --color-cm-selection: #e0eeff;
+    --color-cm-evaluated: #e4e4e4;
     --color-cm-keyword: #ff76c7;
     --color-cm-built-in: #e2e37a;
     --color-cm-number: #be90fc;
@@ -14,6 +14,7 @@
     --color-cm-comment: #5df884;
     --color-cm-string: #5df884;
     --color-cm-text: #f7fdff;
+    --color-cm-selection: #e0eeff;
 
     /* derived colors
     in future use `color-mix` to calculate them which allows for fewer variables
@@ -37,5 +38,5 @@
     --color-extensions-fg: var(--color-cm-background);
 
     --color-input-fg: var(--color-fg);
-    --color-input-bg: var(--color-fg-300);
+    --color-input-bg: var(--color-fg-100);
 }
