--- a/HelpSource/themes/solarizedLight.css
+++ b/HelpSource/themes/solarizedLight.css
@@ -2,7 +2,7 @@
     /* editor colors */
     --color-cm-background: #fdf6e3;
     --color-cm-border: #e1e1e1;
-    --color-cm-selection: #abcfdb;
+    --color-cm-evaluated: #abcfdb;
     --color-cm-keyword: #dc322f;
     --color-cm-built-in: #b58900;
     --color-cm-number: #6c71c4;
@@ -14,6 +14,7 @@
     --color-cm-comment: #586e75;
     --color-cm-string: #93a1a1;
     --color-cm-text: #657b83;
+    --color-cm-selection: var(--color-cm-border);
 
     /* derived colors
     in future use `color-mix` to calculate them which allows for fewer variables
@@ -22,7 +23,7 @@
     */
     --color-bg: var(--color-cm-background);
 
-    --color-warning-bg: var(--color-cm-selection);
+    --color-warning-bg: var(--color-cm-evaluated);
     --color-warning-fg: var(--color-cm-keyword);
 
     --color-fg: var(--color-cm-text);
@@ -37,5 +38,5 @@
     --color-extensions-fg: var(--color-cm-background);
 
     --color-input-fg: var(--color-fg);
-    --color-input-bg: var(--color-fg-300);
+    --color-input-bg: var(--color-fg-100);
 }
