tweak theme colors

--- a/HelpSource/themes/classic.css
+++ b/HelpSource/themes/classic.css
@@ -30,7 +30,7 @@
     --color-fg-400: #333;
     --color-fg-300: #555;
     --color-fg-200: #aaa;
-    --color-fg-100: #ccc;
+    --color-fg-100: #eee;
     
     --color-link: var(--color-cm-string);
 
