--- a/HelpSource/static/scdoc.css
+++ b/HelpSource/static/scdoc.css
@@ -135,7 +135,7 @@ a.subclass_toggle:hover {
 #menubar .menuitem .home {
     /* It is better to make the logo a background image instead of an <img> because it is purely
     decorative. */
-    background-image: url("images/SC_icon.png");
+    background-image: url("../images/SC_icon.png");
     background-repeat: no-repeat;
     background-position: 0.5em center;
     background-size: 1.5em;
@@ -583,7 +583,7 @@ ul.toc li a:hover {
 
 ul.tree, ul.tree ul {
  list-style-type: none;
- background: url(images/vline.png) repeat-y;
+ background: url("./..images/vline.png") repeat-y;
  margin: 0;
  padding: 0;
  margin-left: 1em;
@@ -597,13 +597,13 @@ ul.tree li {
  margin: 0;
  padding: 0 12px;
  line-height: 20px;
- background: url(images/node.png) no-repeat;
+ background: url("./../images/node.png") no-repeat;
 /* color: #369;
  font-weight: bold;*/
 }
 
 ul.tree li:last-child {
- background: var(--color-bg) url(images/lastnode.png) no-repeat;
+ background: var(--color-bg) url("./../images/lastnode.png") no-repeat;
 }
 
 /* is this still used? */
