--- a/HelpSource/scdoc.css
+++ b/HelpSource/scdoc.css
@@ -33,9 +33,27 @@ table {
     margin-top: 1em;
     margin-left: 2em;
 }
-table td {
+table td, table th {
     border: 1px solid var(--color-fg-200);
     padding: 0.3em;
+}
+.v-header {
+    border-right: 4px double var(--color-fg-200);
+    border-left: 1px solid var(--color-fg-200);
+    border-bottom: 1px solid var(--color-fg-200);
+    border-top: 1px solid var(--color-fg-200);
+}
+.h-header {
+    border-bottom: 4px double var(--color-fg-200);
+    border-left: 1px solid var(--color-fg-200);
+    border-right: 1px solid var(--color-fg-200);
+    border-top: 1px solid var(--color-fg-200);
+}
+.hv-header {
+    border-right: 4px double var(--color-fg-200);
+    border-bottom: 4px double var(--color-fg-200);
+    border-left: 1px solid var(--color-fg-200);
+    border-top: 1px solid var(--color-fg-200);
 }
 
 table table {
