--- a/HelpSource/static/scdoc.css
+++ b/HelpSource/static/scdoc.css
@@ -1,3 +1,7 @@
+:root {
+    --menu-bar-height: 33px;
+}
+
 *, *::before, *::after {
     box-sizing: inherit;
 }
@@ -24,7 +28,7 @@ input, select, textarea {
 
 div.contents {
     margin: 0;
-    padding: calc(33px + .5em) 1em 1em;
+    padding: calc(var(--menu-bar-height) + .5em) 1em 1em;
 }
 
 table {
@@ -46,6 +50,12 @@ table table {
 p {
     margin-top: 1em;
     margin-bottom: 0.3em;
+}
+
+a {
+    /* The menu bar takes some pixels which we need to respect
+    when jumping to an anchor. */
+    scroll-margin-top: var(--menu-bar-height);
 }
 
 a:link, a:visited, a:link:hover {
@@ -111,7 +121,7 @@ a.subclass_toggle:hover {
     position: fixed;
     text-indent: 0;
     width: 100%;
-    height: 33px;
+    height: var(--menu-bar-height);
     padding: 0.5em 0;
     background-color: var(--color-bg);
     box-shadow: 0em 0em 0.25em var(--color-fg-200);
@@ -205,7 +215,7 @@ li.menuitem a.menu-link.home {
 
 .submenu, #toc {
     position: absolute;
-    top: 33px;
+    top: var(--menu-bar-height);
     padding: 0.5em;
     display: none;
     background-color: var(--color-bg);
