--- a/HelpSource/static/codemirror.css
+++ b/HelpSource/static/codemirror.css
@@ -24,8 +24,7 @@
 /* GUTTER */
 
 .CodeMirror-gutters {
-  border-right: 1px solid #ddd;
-  background-color: #f7f7f7;
+  background-color: transparent;
   white-space: nowrap;
 }
 .CodeMirror-linenumbers {}
