.btn renamed to .copy-button

--- a/HelpSource/static/scdoc.css
+++ b/HelpSource/static/scdoc.css
@@ -779,7 +779,7 @@ div.met_subclasses a.seemore {
     position: relative;
 }
 
-.btn {
+.copy-button {
     position: absolute;
     top: 4px;
     right: 10px;
