--- a/HelpSource/static/scdoc.css
+++ b/HelpSource/static/scdoc.css
@@ -774,42 +774,79 @@ div.met_subclasses a.seemore {
     color: var(--color-fg);
 }
 
-/* Copy code btn */
+/* Copy button */
 .codeMirrorContainer {
-    position: relative;
+  position: relative;
 }
 
 .copy-button {
-    position: absolute;
-    top: 4px;
-    right: 10px;
-    display: none;
-    background: none;
-    border: none;
-    cursor: pointer;
-    width: 20px;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    z-index: 1;
+  position: absolute;
+  top: 4px;
+  right: 10px;
+  background: none;
+  border: none;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+
+  /* Hidden by default */
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.2s ease;
 }
 
-.copyIco:hover {
-    fill: var(--color-cm-class);
+.codeMirrorContainer:hover .copy-button,
+.codeMirrorContainer:hover .copy-ico {
+  opacity: 1;
+  visibility: visible;
 }
 
-.copyIco,
-.checkmarkIco {
-    width: 20px;
-    height: 20px;
-    display: block;
-    fill: var(--color-cm-comment);
-    transition: fill .3s ease;
+.codeMirrorContainer:not(:hover) .check-ico {
+  opacity: 0;
+  visibility: hidden;
 }
 
-.checkmarkIco {
-    display: none;
-    position: absolute;
-    top: 0px;
-    left: 0px;
+.copy-ico,
+.check-ico {
+  width: 20px;
+  height: 20px;
+  display: block;
+  font-size: 18px;
+  color: var(--color-cm-comment);
+  transition: color 0.3s ease, opacity 0.2s ease;
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.copy-ico:hover {
+  color: var(--color-cm-class);
+}
+
+.copy-button.copied .copy-ico {
+  display: none;
+}
+
+.copy-button.copied .check-ico {
+  animation: fadeCheckmark 1.4s ease forwards;
+  visibility: visible;
+}
+
+@keyframes fadeCheckmark {
+  0% {
+    opacity: 0;
+  }
+  10%,
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
