--- a/HelpSource/static/scdoc.css
+++ b/HelpSource/static/scdoc.css
@@ -536,8 +536,6 @@ td p {
     overflow-wrap: break-word;
     right: 0;
     line-height: 130%;
-    text-indent: -0.7em;
-    padding-left: 0.7em;
 }
 #toctitle {
     font-weight: bold;
@@ -554,14 +552,15 @@ li {
 ul.toc {
     list-style-type: none;
     margin: 0;
-    padding: 0;
+    padding: 0.25em 0;
 }
 ul.toc ul {
     margin-left: 1em;
+    padding: 0.25em 0;
 }
 ul.toc li {
     margin: 0;
-    padding: 0;
+    padding: 0.25em 0;
 }
 
 ul.toc li a {
